--- a/src/App.css
+++ b/src/App.css
@@ -2,10 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
-  background-color: lightgray;
 }
 
-.center-center{
+.center-center {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -14,7 +13,7 @@ body {
 }
 
 .TextField {
-  color: #F44336;
+  color: #f44336;
 }
 
 .App {
@@ -41,6 +40,26 @@ body {
   font-size: large;
 }
 
-.modal-header {
-  display: block;
+
+.split {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.cleaning-section{
+  max-width: 300px;
+}
+
+.cleaning-lists{
+  display: flex;
+  flex-direction: row;
+}
+
+@media {
+  .log-in-box{
+    min-width: 270px;
+    min-height: 300px;
+  }
 }
